// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component applies custom class name 1`] = `
<div
  class="relative flex items-center"
>
  <input
    aria-checked="false"
    class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
    id="checkbox-0ljx9umlt"
    type="checkbox"
    value=""
  />
</div>
`;

exports[`Checkbox Component disables the checkbox when disabled prop is true 1`] = `
<input
  aria-checked="false"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            opacity-50 cursor-not-allowed
          "
  disabled=""
  id="checkbox-8mnm81qro"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component disables the checkbox when disabled prop is true 2`] = `
[MockFunction] {
  "calls": [
    [
      true,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Checkbox Component handles controlled state changes 1`] = `
<input
  aria-checked="true"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            bg-blue-600 border-blue-600
            
            
          "
  id="checkbox-b5vzccnzt"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component handles uncontrolled state changes 1`] = `
<input
  aria-checked="false"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
  id="checkbox-u7qxsj3cq"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component handles uncontrolled state changes 2`] = `
<input
  aria-checked="true"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            bg-blue-600 border-blue-600
            
            
          "
  id="checkbox-u7qxsj3cq"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component handles uncontrolled state changes 3`] = `
<input
  aria-checked="false"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
  id="checkbox-u7qxsj3cq"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component passes through custom props 1`] = `
<input
  aria-checked="false"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
  id="custom-id"
  name="custom-name"
  required=""
  type="checkbox"
  value="custom-value"
/>
`;

exports[`Checkbox Component renders correctly with default props 1`] = `
<div>
  <div
    class="flex items-center "
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-checked="false"
        class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
        id="checkbox-cyxd3b4ui"
        type="checkbox"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox Component renders with a label 1`] = `
<label
  class="ml-2 text-base cursor-pointer"
  for="checkbox-ee1jmcjag"
>
  Test Label
</label>
`;

exports[`Checkbox Component renders with a label 2`] = `
<input
  aria-checked="false"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
  id="checkbox-ee1jmcjag"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component renders with different sizes 1`] = `
<div>
  <div
    class="flex items-center "
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-checked="false"
        class="
            w-3 h-3
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
        id="checkbox-9eehmzvb6"
        type="checkbox"
        value=""
      />
    </div>
    <label
      class="ml-2 text-sm cursor-pointer"
      for="checkbox-9eehmzvb6"
    >
      Small
    </label>
  </div>
</div>
`;

exports[`Checkbox Component renders with different sizes 2`] = `
<div>
  <div
    class="flex items-center "
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-checked="false"
        class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
        id="checkbox-9eehmzvb6"
        type="checkbox"
        value=""
      />
    </div>
    <label
      class="ml-2 text-base cursor-pointer"
      for="checkbox-9eehmzvb6"
    >
      Medium
    </label>
  </div>
</div>
`;

exports[`Checkbox Component renders with different sizes 3`] = `
<div>
  <div
    class="flex items-center "
  >
    <div
      class="relative flex items-center"
    >
      <input
        aria-checked="false"
        class="
            w-5 h-5
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            
            
          "
        id="checkbox-9eehmzvb6"
        type="checkbox"
        value=""
      />
    </div>
    <label
      class="ml-2 text-lg cursor-pointer"
      for="checkbox-9eehmzvb6"
    >
      Large
    </label>
  </div>
</div>
`;

exports[`Checkbox Component sets the indeterminate state correctly 1`] = `
<input
  aria-checked="mixed"
  class="
            w-4 h-4
            appearance-none
            border border-gray-300
            rounded
            bg-white
            transition-colors
            duration-200
            cursor-pointer
            focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
            
            bg-blue-600 border-blue-600
            
          "
  id="checkbox-kii06k660"
  type="checkbox"
  value=""
/>
`;
